--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <div class="scaffold">
     <div class="container">
         <img src="assets/icons/icon-192x192.png" alt="Logo" class="logo">
-        <h1 class="app-title">Space</h1>
+        <h1 class="app-title">Space Music</h1>
 
         <div class="section-title">New Song</div>
         <form class="form-container" id="titleForm">
