--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Music App</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
    <div class="scaffold">
